// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  className="wrapper default"
  onClick={[MockFunction]}
  type="submit"
>
  Test
</button>
`;

exports[`Button renders a disabled variant 1`] = `
<button
  className="wrapper disabled"
  disabled={true}
  type="submit"
>
  Test
</button>
`;

exports[`Button renders a light variant 1`] = `
<button
  className="wrapper light"
  onClick={[MockFunction]}
  type="submit"
>
  Test
</button>
`;

exports[`Button renders an icon 1`] = `
<button
  className="wrapper default"
  onClick={[MockFunction]}
  type="submit"
>
  Test
  <svg
    viewBox="0 0 64 64"
  >
    <path
      d="M58.245 12.152C54.943 5.81 49.81 3.455 44.231 4.91c-5.098 1.33-9.79 5.742-11.762 11.094L32 17.277l-.47-1.274c-1.97-5.352-6.662-9.765-11.76-11.093-5.578-1.454-10.712.9-14.014 7.243C1.012 21.262 9.709 37.021 32 59.294 54.291 37.02 62.988 21.263 58.245 12.152z"
    />
  </svg>
</button>
`;
